--- a/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Provider.adoc
+++ b/doc-Managing_Providers/topics/Adding_a_Red_Hat_Virtualization_Provider.adoc
@@ -8,7 +8,7 @@ After initial installation and creation of a {product-title} environment, add a 
 . Select *Red Hat Virtualization* from the *Type* list.
 . Select the appropriate *Zone* for the provider. If you do not specify a zone, it is set to *default*.
 . Under *Endpoints* in the *Default* tab, configure the following: 
-* Enter the *Hostname* or IPv4 or IPv6 address of the provider.
+* Enter the *Hostname* or IPv4 or IPv6 address of the Red Hat Virtualization Manager.
 +
 [IMPORTANT]
 ====
