updated based on review feedback

--- a/common/automate-custom-button.adoc
+++ b/common/automate-custom-button.adoc
@@ -23,7 +23,7 @@ If image:../images/1862.png[image] (*Add a new Button*) is not available, that m
 
 . Under the *Options* tab:
 .. Select the *Button* type from the list. 
-.. Type in button *Text* and *Hover Text*, and select the *Icon* and *Icon Color* to use.
+.. Enter button *Text* and *Hover Text*, and select the *Icon* and *Icon Color* to use.
 .. Select a *Dialog* if applicable.
 .. Check *Open URL* to open a browser window for the custom URL returned when the button is executed.  
 .. Choose a *Display For* option for the button. 
