Peer review edits

--- a/common/automate-custom-button.adoc
+++ b/common/automate-custom-button.adoc
@@ -30,7 +30,7 @@ If image:../images/1862.png[image] (*Add a new Button*) is not available, that m
 .. Select a *Submit* parameter to choose how to submit objects to automate. Selecting _Submit All_ will pass all objects at once when the button is executed, while choosing _One by one_ will run execute the button action each time per object. 
 +
 . Under the *Advanced* tab:
-.. Set button *Enablement*. Click *Define Expression* to access the expression editor tool. Provide *Disabled Button Text* to display when the custom button is disabled. 
+.. Set button *Enablement*. Click *Define Expression* to access the expression editor tool. Enter *Disabled Button Text* to display when the custom button is disabled. 
 .. Use *Visibility* to determine button appearance based on a custom expression. Click *Define Expression* to access the expression editor tool. 
 +
 [NOTE]
@@ -40,9 +40,9 @@ For more about setting visibility and enablement for a custom button, see <<filt
 +
 .. In *Object Details*, select *Request* from the `/System/Process/` dropdown. By default, the message is `create`. Do not change it.
 
-.. Type in a *Request* name for the `/System/Process/Request` instance.
+.. Enter a *Request* name for the `/System/Process/Request` instance.
 
-.. Type in the `Attribute/Value Pairs` fields if applicable.
+.. Enter the *Attribute/Value Pairs* fields if applicable.
 
 .. Set *Role Access*. Selecting _<By Role>_ will display available roles. Check applicable roles. 
 
