--- a/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/Importing_and_Exporting_Policies_Policy_Profiles_and_Alerts.adoc
@@ -3,7 +3,11 @@
 
 If you have multiple VMDBs, you can export policies, policy profiles, or alerts from one to another.
 You can export and import for use with other {product-title} infrastructures. 
+
+[NOTE]
+====
 The appliances you are exporting or importing data between must use the same {product-title_short} version.
+====
 
 . Copy the file to import to a location that is accessible to your {product-title} console.
 . Navigate to menu:Control[Import/Export].
