--- a/doc-Scripting_Actions/topics/chap_automation_model.adoc
+++ b/doc-Scripting_Actions/topics/chap_automation_model.adoc
@@ -118,6 +118,12 @@ include::To_simulate_an_Automate_Model1.adoc[]
 The *Automate Model* can be exported and imported as a YAML file.
 {product-title} allows you to back up your model by export. Red Hat may provide you with new or updated classes, and provides an import function for either a class or the entire model. Finally, you can reset the datastore to its default. Always be sure to export the current datastore before importing or resetting.
 
+[NOTE]
+====
+The datastores you are exporting or importing between must use the same {product-title_short} version.
+====
+
+
 include::To_export_all_Classes_classes1.adoc[]
 
 include::To_import_Datastore_classes1.adoc[]
