updated all refs from OSE to OCP in filenames, etc.; updated links to current version of CloudForms and current version of OpenShift - 4.6 and 3.9

--- a/doc-Integration_with_OpenShift_Container_Platform/miq/index.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/miq/index.adoc
@@ -20,20 +20,20 @@ include::common/attributes/miq.adoc[]
 
 include::topics/overview.adoc[]
 
-[[ose-metrics]]
-= Configuring OpenShift Container Platform Metrics
+[[ocp-metrics]]
+= Enabling OpenShift Container Platform Metrics
 
-include::topics/ose-metrics.adoc[]
+include::topics/ocp-metrics.adoc[]
 
-[[Obtaining_OpenShift_Enterprise_Management_Token]]
+[[Obtaining_OpenShift_Management_Token]]
 = Retrieving the OpenShift Container Platform Management Token
 
-include::topics/ose-retrieve-tokens.adoc[]
+include::topics/ocp-retrieve-tokens.adoc[]
 
 [[cf-main]]
-= Configuring ManageIQ
+= Configuring {product-title}
 
-include::topics/ose-config-cfmiq.adoc[]
+include::topics/ocp-config-cfmiq.adoc[]
 
 
 [[cf-smartproxy]]
@@ -44,7 +44,7 @@ include::common/smartstate.adoc[]
 [[integration]]
 = Adding the OpenShift Deployment as a Container Provider
 
-include::topics/provider-ose-add-container.adoc[]
+include::topics/provider-ocp-add-container.adoc[]
 
 [[scanning]]
 = Container Image Scanning
