--- a/doc-Integration_with_OpenShift_Container_Platform/topics/image-scanning.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/topics/image-scanning.adoc
@@ -70,8 +70,8 @@ The copied profile can be edited as required. Be sure to assign the customized p
 == Controlling OpenShift Pod Execution
 
 Through the default policy profile, non-compliant images receive the control policy action *Mark as Non-Compliant*. This action annotates the *image* object (not to be confused with the *imagestream* object) with _images.openshift.io/deny-execution=true_. This annotation may be used to prevent nodes from running non-compliant images.
-ifdef::cfme[Refer to link:https://access.redhat.com/documentation/en-us/openshift_container_platform/3.5/html/cluster_administration/admin-guide-image-policy[OpenShift Image Policy documentation] for configuration details.]
-ifdef::miq[Refer to link:https://docs.openshift.org/latest/admin_guide/image_policy.html[OpenShift Image Policy documentation] for configuration details.]
+ifdef::cfme[Refer to the link:https://access.redhat.com/documentation/en-us/openshift_container_platform/3.9/html/cluster_administration/admin-guide-image-policy[OpenShift Container Platform _Image Policy_] documentation for configuration details.]
+ifdef::miq[Refer to the link:https://docs.openshift.org/latest/admin_guide/image_policy.html[OpenShift Image Policy] documentation for configuration details.]
 
 == Reference
 
