--- a/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
@@ -25,20 +25,20 @@ include::topics/overview.adoc[]
 
 include::topics/prerequisites.adoc[]
 
-[[ose-metrics]]
+[[ocp-metrics]]
 = Enabling OpenShift Container Platform Metrics
 
-include::topics/ose-metrics.adoc[]
+include::topics/ocp-metrics.adoc[]
 
-[[Obtaining_OpenShift_Enterprise_Management_Token]]
+[[Obtaining_OpenShift_Management_Token]]
 = Retrieving the OpenShift Container Platform Management Token
 
-include::topics/ose-retrieve-tokens.adoc[]
+include::topics/ocp-retrieve-tokens.adoc[]
 
 [[cf-main]]
 = Configuring {product-title}
 
-include::topics/ose-config-cfmiq.adoc[]
+include::topics/ocp-config-cfmiq.adoc[]
 
 
 [[cf-smartproxy]]
@@ -49,7 +49,7 @@ include::common/smartstate.adoc[]
 [[integration]]
 = Adding OpenShift Container Platform as a Container Provider
 
-include::topics/provider-ose-add-container.adoc[]
+include::topics/provider-ocp-add-container.adoc[]
 
 [[scanning]]
 = Container Image Scanning
