--- a/doc-Integration_with_OpenShift_Container_Platform/topics/prerequisites.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/topics/prerequisites.adoc
@@ -1,7 +1,7 @@
 This guide assumes that you have: 
 
-* link:https://access.redhat.com/documentation/en/openshift-enterprise/version-3.1/installation-and-configuration/[Already deployed {product-title}]
-* link:https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/installation-and-configuration/[Already deployed OpenShift Container Platform]
+* link:https://access.redhat.com/documentation/en/red-hat-cloudforms/[Already deployed {product-title} on your chosen platform]
+* link:https://access.redhat.com/documentation/en-us/openshift_container_platform/3.9/html/installation_and_configuration/[Already deployed OpenShift Container Platform]
 
 
-When enabling metrics on OpenShift Container Platform, you can store your metrics data on _persistent_ or _non-persistent_ storage. To use persistent storage, you need to provision a persistent volume specifically for this purpose before xref:ose-metrics-storage[configuring the metrics components]. See https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/#architecture-additional-concepts-storage[Persistent Volumes] in the https://access.redhat.com/documentation/en/openshift-enterprise/version-3.2/architecture/[OpenShift Container Platform Architecture documentation] for more information.
+When enabling metrics on OpenShift Container Platform, you can store your metrics data on _persistent_ or _non-persistent_ storage. To use persistent storage, you need to provision a persistent volume specifically for this purpose before xref:ocp-metrics-storage[configuring the metrics components]. See https://access.redhat.com/documentation/en-us/openshift_container_platform/3.9/html/architecture/additional-concepts#architecture-additional-concepts-storage[Persistent Volumes] in the OpenShift Container Platform _Architecture_ documentation for more information.
