--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -616,7 +616,7 @@ If you are using the {product-title} control feature set, then you have the abil
 
 [NOTE]
 ======
-See the vendor documentation to ensure you are installing appropriate applications for your virtual infrastructure. Once you have installed the required software, you must specify its version in the {product-title_short} configuration settings.
+See vendor documentation to ensure you are installing appropriate applications for your virtual infrastructure. Once you have installed the required software, you must specify its version in the {product-title_short} configuration settings.
 ======
 
 image:2061.png[]
