Applied SME review feedback.

--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -62,7 +62,7 @@ In OpenShift, the default deployment of the router generates certificates during
 +
 [NOTE]
 ====
-These settings download the image inspector container image from the registry and obtain the Common Vulnerabilities and Exposures (CVE) information (for effective scanning) via a proxy. This requires {product-title_short} appliance to have external access to reach the Internet; the URLs required by {product-title_short} to be open for OpenSCAP scanning are: 
+These settings control downloading the image inspector container image from the registry and obtaining the Common Vulnerabilities and Exposures (CVE) information (for effective scanning) via a proxy. The URLs required by {product-title_short} to be open for OpenSCAP scanning are: 
 
 * https://www.redhat.com/security/data/metrics/ds/
 * https://cve.mitre.org/cgi-bin/cvename.cgi?name=
