--- a/common/provisioning-requests-openstack.adoc
+++ b/common/provisioning-requests-openstack.adoc
@@ -1,9 +1,10 @@
+Create a request to provision Red Hat OpenStack Platform cloud instances from images, volumes and volume snapshots using {product-title}. 
 
 . Navigate to menu:Compute[Clouds > Instances].
 
 . Click image:2007.png[](*Lifecycle*), then click image:1862.png[](*Provision Instances*).
 
-. Select an OpenStack image from the list presented. These images must be available on your OpenStack provider.
+. Select an OpenStack image, volume or volume snapshot from the list presented. These files must be available on your OpenStack provider.
 
 . Click *Continue*.
 
@@ -16,11 +17,11 @@ Parameters with a * next to the label are required to submit the provisioning re
 +
 . Click the *Purpose* tab to select the appropriate tags for the provisioned instance.
 . Click the *Catalog* tab for basic instance options.
-.. To change the image to use as a basis for the instance, select it from the list of images.
+.. To change the source file to use as a basis for the instance, select it from the list images, volumes or volume snapshots.
 .. Select the *Number of Instances* to provision.
 .. Type a *Instance Name* and *Instance Description*.
 
-. Click the *Environment* tab to select the instance's *Tenant*, *Availabilty Zones*, *Cloud Network*, *Security Groups*, and *Public IP Address*. If no specific Tenant is required, select the *Choose Automatically* checkbox.
+. Click the *Environment* tab to select the instance's *Cloud Tenant*, *Availabilty Zones*, *Cloud Network*, *Security Groups*, and *Public IP Address*. If no specific Cloud Tenant is required, select the *Choose Automatically* checkbox.
 
 . Click the *Properties* tab to set provider options such as flavors and security settings.
 .. Select a flavor from the *Instance Type* list.
