--- a/common/provisioning-requests-openstack.adoc
+++ b/common/provisioning-requests-openstack.adoc
@@ -1,4 +1,4 @@
-Create a request to provision Red Hat OpenStack Platform cloud instances from images, volumes and volume snapshots using {product-title}. 
+Create a request to provision Red Hat OpenStack Platform cloud instances from images, volumes and volume snapshots using {product-title}. Only bootable volumes not in use will be available. 
 
 . Navigate to menu:Compute[Clouds > Instances].
 
@@ -8,7 +8,7 @@ Create a request to provision Red Hat OpenStack Platform cloud instances from im
 
 . Click *Continue*.
 
-. On the *Request* tab, enter information about this provisioning request. In *Request Information*, type in at least a first and last name and an email address. This email is used to send the requester status emails during the provisioning process for items such as auto-approval, quota, provision complete, retirement, request pending approval, and request denied. The other information is optional. If the {product-title} Server is configured to use LDAP, you can use the *Look Up* button to populate the other fields based on the email address.
+. On the *Request* tab, enter information about this provisioning request. In *Request Information*, type in at least an email address. This email is used to send the requester status emails during the provisioning process for items such as auto-approval, quota, provision complete, retirement, request pending approval, and request denied. The other information is optional. If the {product-title} Server is configured to use LDAP, you can use the *Look Up* button to populate the other fields based on the email address.
 +
 [NOTE]
 ====
