update section title

--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Provisioning_Requests.adoc
@@ -473,7 +473,7 @@ Request 99 in region 123 results in Request ID 123000000000099.
 
 
 [[provisioning-an-openstack-instance-from-an-image]]
-==== Provisioning an OpenStack Instance from an Image, Volume or Volume Snapshot
+==== Provisioning an OpenStack Instance from an Image, Snapshot, Volume or Volume Snapshot
 
 include::common/provisioning-requests-openstack.adoc[]
 
