--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -606,8 +606,8 @@ image:2061.png[]
 * If you select *VNC*, type in the port number used. This port must be open on the target virtual machine and the VNC software must be installed there. On the computer that you are running the console from, you must install the appropriate version of Java Runtime if it is not already installed.
 * If you select *VMware WebMKS*, select the appropriate version.
 * If using *VMware VMRC* desktop application, be sure that you have fulfilled the requirements. The correct version of the VMRC desktop application from VMware must be installed on the client computer.
-To do this, log into the Virtual Center Web Service and attempt to open a virtual machine console.
-The vSphere Web Client must be installed on VirtualCenter version 5, and the provider must be registered to it. For VirtualCenter version 4, the VMware VirtualCenter Management Webservice must be running.
+To do this, log into the vCenter Web Service and attempt to open a virtual machine console.
+The vSphere Web Client must be installed on vCenter version 5, and the provider must be registered to it. For vCenter version 4, the VMware vCenter Management Webservices must be running.
 
 [[ntp-servers-settings]]
 ====== NTP Servers Settings
