--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -15,7 +15,7 @@ A console is a graphical window that allows you to view the start up screen, shu
 
 * Currently, attempting to connect to the VMware WebMKS console for a virtual machine fails when the server security type is set to `2` for that virtual machine.
 
-* Due to VMware licensing restrictions Red Hat cannot ship WebMKS SDK in {product-title_short}. For information on how to configure the WebMKS support in {product-title_short}, see <<Configuring the WebMKS Support in {product-title_short}>>.
+* Due to VMware licensing restrictions, Red Hat cannot ship the WebMKS SDK in {product-title_short}. For information on how to configure WebMKS support in {product-title_short}, see <<Configuring WebMKS Support in {product-title_short}>>.
 ====
 
 All of the above make use of the websocket protocol supported by all recent versions of browsers, and can use SSL to encrypt the websocket connection.
@@ -24,7 +24,7 @@ OpenStack:: {product-title} only makes an API call to get the URL for the consol
 
 Red Hat Enterprise Virtualization Manager and VMware:: By default, the websocket connection runs over HTTPS or HTTP based on how the application was accessed.
 Under an appliance, you will most likely use HTTPS, and, therefore, the websocket connection will be wss:// (websocket with SSL).
-
++
 When configuring Red Hat Virtualization Manager for virtual machine console access, set the display type for each virtual machine to `noVNC` or `SPICE HTML5`. 
 ifdef::cfme[Support for the SPICE HTML5 console client is offered as a technology preview.]
 For more information on configuring console options, see https://access.redhat.com/documentation/en/red-hat-virtualization/4.0/single/virtual-machine-management-guide#sect-Configuring_Console_Options[Configuring Console Options] in the Red Hat Virtualization _Virtual Machine Management Guide_.
@@ -91,7 +91,7 @@ Follow these steps to configure the VMware ESXi host firewall ports for HTML5 or
 
 
 [[configuring-the-webmks-support]]
-== Configuring the WebMKS Support in {product-title_short}
+== Configuring WebMKS Support in {product-title_short}
 
 Complete the following steps to enable WebMKS support in {product-title_short}.
 
