Minor correction for 'snapshots'
And corrected existing grammar issue (list images...)

--- a/common/provisioning-requests-openstack.adoc
+++ b/common/provisioning-requests-openstack.adoc
@@ -1,4 +1,4 @@
-Create a request to provision Red Hat OpenStack Platform cloud instances from images, image snapshots, volumes, and volume snapshots using {product-title}. Only bootable volumes not in use will be available. 
+Create a request to provision Red Hat OpenStack Platform cloud instances from images, volumes, and volume snapshots using {product-title}. Only bootable volumes not in use will be available. 
 
 . Navigate to menu:Compute[Clouds > Instances].
 
@@ -17,7 +17,7 @@ Parameters with a * next to the label are required to submit the provisioning re
 +
 . Click the *Purpose* tab to select the appropriate tags for the provisioned instance.
 . Click the *Catalog* tab for basic instance options.
-.. To change the source file to use as a basis for the instance, select it from the list images, snapshots, volumes, or volume snapshots.
+.. To change the source file to use as a basis for the instance, select it from the list of images, volumes, or volume snapshots.
 .. Select the *Number of Instances* to provision.
 .. Type a *Instance Name* and *Instance Description*.
 
