Applied peer review feedback.

--- a/common/provider-ocp-add-container.adoc
+++ b/common/provider-ocp-add-container.adoc
@@ -62,7 +62,7 @@ In OpenShift, the default deployment of the router generates certificates during
 +
 [NOTE]
 ====
-These settings control downloading the image inspector container image from the registry and obtaining the Common Vulnerabilities and Exposures (CVE) information (for effective scanning) via a proxy. The URLs required by {product-title_short} to be open for OpenSCAP scanning are: 
+These settings control downloading the image inspector container image from the registry and obtaining the Common Vulnerabilities and Exposures (CVE) information (for effective scanning) via a proxy. Enter the following two URLs in the proxy information field that {product-title_short} requires to be open for OpenSCAP scanning.
 
 * https://www.redhat.com/security/data/metrics/ds/
 * https://cve.mitre.org/cgi-bin/cvename.cgi?name=
@@ -71,8 +71,8 @@ The information about the list of URLs is based on the source code of OpenSCAP.
 ====
 +
 .. Enter proxy information for the provider in *HTTP*, *HTTPS*, and *NO Proxy*.
-.. Enter the *Image-Inspector Repository* information.
-.. Enter the *Image-Inspector Registry* information. 
+.. Enter the *Image-Inspector Repository* information. For example, `openshift3/image-inspector`.
+.. Enter the *Image-Inspector Registry* information. For example, `registry.access.redhat.com`.
 .. Enter the *Image-Inspector Tag* value. A tag is a mark used to differentiate images in a repository, typically by the application version stored in the image.
 .. Enter the *CVE location*.
 . Click *Add*.
