--- a/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
@@ -49,7 +49,7 @@ include::common/smartstate.adoc[]
 [[integration]]
 = Adding OpenShift Container Platform as a Container Provider
 
-include::topics/provider-ose-add-container.adoc[]
+include::topics/add-ocp-provider.adoc[]
 
 [[scanning]]
 = Container Image Scanning
