--- a/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
@@ -2849,11 +2849,15 @@ The following methods can be used on a virtual machine or template object.
 							
 						
 |
-							add_disk footnoteref:[1,Supported for Red Hat Virtualization and VMWare virtual machines]
+							add_disk footnote:[Supported for Red Hat Virtualization and VMWare virtual machines]
 							
 |
 
-							Add storage to an existing VM. This method accepts as parameters: disk_name, disk_size, and options to pass values for `:thinProvisioned`, `:dependent`, and `:persistent`. Example: `vm.add_disk("[#{vm.storage_name}]", size_in_mb, thin_provisioned: true)`
+							Add storage to an existing VM. 
+							
+							This method accepts as parameters: disk_name, disk_size_mb, and options to pass values for :thinProvisioned, :dependent, and :persistent. 
+							
+							Example: `vm.add_disk("[#{vm.storage_name}]", size_in_mb, thin_provisioned: true)`
 
 | 
 							
