--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -3074,17 +3074,17 @@ See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-si
 
 {product-title} provides a default database password for the internal PostgreSQL database.
 
-To change the password, you need to stop the {product-title} service, change the password for the PostgreSQL database, run a command to change the password in the configuration file that `evmserverd` uses to access the server, and restart the {product-title} appliance.
+To change the password, you need to stop the {product-title_short} service, change the password for the PostgreSQL database, run a command to change the password in the configuration file that `evmserverd` uses to access the server, and restart the {product-title_short} appliance.
 
-. Stop the {product-title} service:
+. Stop the {product-title_short} service:
 .. SSH into the appliance.
-.. To stop the {product-title} service, run the following command:
+.. To stop the {product-title_short} service, run the following command:
 +
 ------
 service evmserverd stop
 ------
 +
-. Use `pgadmin` to change the password for your {product-title} database (default is `vmdb_production`). If you do not have `pgadmin`, you can change the password by running:
+. Use `pgadmin` to change the password for your {product-title_short} database (default is `vmdb_production`). If you do not have `pgadmin`, you can change the password by running:
 +
 ------
 psql -U root -d vmdb_production
@@ -3108,21 +3108,21 @@ ALTER USER root WITH PASSWORD 'newpassword';
 /var/www/miq/vmdb/tools/fix_auth.rb --databaseyml --password newpassword
 ------
 +
-. Restart the {product-title} service:
+. Restart the {product-title_short} service:
 +
 ------
 service evmserverd start
 ------
 +
-. Verify that you can log in to the {product-title} console.
+. Verify that you can log in to the {product-title_short} console.
 
 
 [[changing-the-password-on-the-worker-appliances]]
 ===== Changing the Password on the Worker Appliances
 
-. Stop the {product-title} service:
+. Stop the {product-title_short} service:
 .. SSH into the appliance.
-.. To stop the {product-title} service, run the following command:
+.. To stop the {product-title_short} service, run the following command:
 +
 ------
 service evmserverd stop
@@ -3134,7 +3134,7 @@ service evmserverd stop
 /var/www/miq/vmdb/tools/fix_auth.rb --databaseyml --password newpassword
 ------
 +
-. Restart the {product-title} service:
+. Restart the {product-title_short} service:
 +
 ------
 service evmserverd start
