--- a/doc-Installing_on_AWS/topics/installation.adoc
+++ b/doc-Installing_on_AWS/topics/installation.adoc
@@ -37,7 +37,7 @@ Uploading the {product-title} appliance file onto Amazon EC2 has the following r
 
 * 44 GB of space on the chosen datastore.
 * 12 GB RAM.
-* 4 VCPUs.
+* 4 vCPUs.
 * An Amazon S3 bucket to store disk images.
 * A VM import service role (IAM role) named `vmimport`. 
 * Depending on your infrastructure, allow time for the upload.
@@ -46,14 +46,13 @@ To upload the image:
 
 . Upload to the Amazon S3 Bucket the {product-title} appliance VHD image from your local file system using your choice of tool.
 
+[[Prerequisites-on-amazon-ec2]]
+=== Prerequisite Steps on Amazon EC2
+
 [NOTE]
 ====
 These are the prerequisites and procedural steps as of the time of writing. For more information on creating an Amazon S3 Bucket and VM Import Service Role, consult the Amazon EC2 documentation.
 ====
-
-
-[[Prerequisites-on-amazon-ec2]]
-=== Prerequisite Steps on Amazon EC2
 
 Complete the following prerequisite steps on AWS:
 
