--- a/doc-High_Availability_Guide/topics/Installation.adoc
+++ b/doc-High_Availability_Guide/topics/Installation.adoc
@@ -55,7 +55,7 @@ After installing and configuring an empty database-only appliance in xref:instal
 This must be configured from the {product-title_short} appliance before the primary and secondary database-only appliances can be configured.
 ====
 
-. Deploy a {product-title_short} appliance with an extra partition for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
+. Deploy a {product-title_short} appliance. There is no requirement for an extra partition on this appliance.
 . Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
 . SSH into the {product-title_short} appliance to enter the appliance console. 
 . Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
@@ -173,7 +173,7 @@ Verify the configuration on the appliance console details screen for the standby
 
 Install a second virtual machine with a {product-title_short} appliance and any additional appliances in the region using the following steps:
 
-. Deploy a {product-title_short} appliance with an extra partition for the database at a size appropriate for your deployment. For recommendations on disk space, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.5/html/deployment_planning_guide/introduction#database-requirements[Database Requirements] in the _Deployment Planning Guide_.
+. Deploy a {product-title_short} appliance. There is no requirement for an extra partition on this appliance.
 . Configure time synchronization on the appliance by editing `/etc/chronyd.conf` with valid NTP server information.
 . SSH into the {product-title_short} appliance to enter the appliance console. 
 . Configure networking as desired by selecting the *Set DHCP Network Configuration* or *Set Static Network Configuration* option.
