--- a/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
+++ b/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
@@ -26,7 +26,14 @@ If image:../images/1862.png[image] (*Add a new Button*) is not available, that m
 . Select *Ansible Playbook* from the *Button Type* drop-down menu. 
 . From the *Playbook Catalog Item* choose a playbook-backed catalog item to run.
 . Choose a host from the *Inventory* against which to run the playbook. If *Specific Hosts* is selected, input the IP address or DNS names for each host in the text field, separating each with a comma. 
++
+[NOTE]
+====
+To allow service dialogs associated with the custom button to override user input set the custom button to "Specific Hosts" and leave the associated text field blank.
 
+Otherwise, the admin selected value will be used regardless of the value specified on the dialog by the user.  To avoid confusion the admin should remove the "Hosts" field from the dialog the service is using.
+====
++
 . Type in a *Text* and *Hover Text*, and select the *Icon* you want to use.
 . Select an *Icon Color* from the  color selection palette that pops up. 
 . Check *Open URL* to open a browser window for the custom URL returned when the playbook is run. 
