--- a/doc-Installing_on_VMware_vSphere/topics/additional_configuration.adoc
+++ b/doc-Installing_on_VMware_vSphere/topics/additional_configuration.adoc
@@ -65,7 +65,7 @@ By default, the {product-title_short} appliance uses the `tuned` service and its
 
 However on some VMware setups (for example, with a large vCenter database), the following additional tuning may further improve appliance performance:
 
-* When using the `virtual-guest` profile in `tuned`, edit the `vm.swappiness` setting to 1 in the `tuned.conf` file from the default of `vm.swappiness = 30`.
+* When using the `virtual-guest` profile in `tuned`, edit the `vm.swappiness` setting to `1` in the `tuned.conf` file from the default of `vm.swappiness = 30`.
 
 * Use the `noop` scheduler instead. See the https://kb.vmware.com/s/article/2011861[VMware documentation] for more details on the best scheduler for your environment. See https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/performance_tuning_guide/sect-red_hat_enterprise_linux-performance_tuning_guide-storage_and_file_systems-configuration_tools#sect-Red_Hat_Enterprise_Linux-Performance_Tuning_Guide-Configuration_tools-Setting_the_default_IO_scheduler[Setting the Default I/O Scheduler] in the Red Hat Enterprise Linux _Performance Tuning Guide_ for instructions on changing the default I/O scheduler.
 
