added admonition to link to smartstate/proxy Kbase solution

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -75,6 +75,11 @@ The project topology page displays the project as the center node, surrounded by
 
 Perform a SmartState Analysis of a container image to inspect the packages included in an image.
 
+[IMPORTANT]
+====
+{product-title_short} performs SmartState Analysis on container providers by creating an OpenShift pod to run the SmartState process. When using a proxy to connect to outside resources, such as the image repository used by OpenShift, add the proxy credentials to the OpenShift pod as described in https://access.redhat.com/solutions/2915411.
+====
+
 .Running a SmartState Analysis
 . Navigate to menu:Compute[Containers > Container Images].
 . Check the container image to analyze. You can check multiple images.
