added note about proxy configuration to Integrating with OCP guide; corrected capitalized Analysis (see product conventions in RH glossary); fixed older links to other guides

--- a/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
@@ -46,6 +46,11 @@ include::topics/ocp-config-cfmiq.adoc[]
 
 include::common/smartstate.adoc[]
 
+[IMPORTANT]
+====
+{product-title_short} performs SmartState analysis on container providers by creating an OpenShift pod to run the SmartState process. When using a proxy to connect to outside resources, such as the image repository used by OpenShift, add the proxy credentials to the OpenShift pod as described in https://access.redhat.com/solutions/2915411.
+====
+
 [[integration]]
 = Adding OpenShift Container Platform as a Container Provider
 
