--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -73,11 +73,11 @@ The project topology page displays the project as the center node, surrounded by
 [[running-a-smartstate-analysis]]
 == Running a SmartState Analysis
 
-Perform a SmartState Analysis of a container image to inspect the packages included in an image.
+Perform a SmartState analysis of a container image to inspect the packages included in an image.
 
 [IMPORTANT]
 ====
-{product-title_short} performs SmartState Analysis on container providers by creating an OpenShift pod to run the SmartState process. When using a proxy to connect to outside resources, such as the image repository used by OpenShift, add the proxy credentials to the OpenShift pod as described in https://access.redhat.com/solutions/2915411.
+{product-title_short} performs SmartState analysis on container providers by creating an OpenShift pod to run the SmartState process. When using a proxy to connect to outside resources, such as the image repository used by OpenShift, add the proxy credentials to the OpenShift pod as described in https://access.redhat.com/solutions/2915411.
 ====
 
 .Running a SmartState Analysis
@@ -88,4 +88,4 @@ Perform a SmartState Analysis of a container image to inspect the packages inclu
 
 The container image is scanned. The process will copy over any required files for the image. After reloading the image page, all new or updated packages are listed.
 
-To monitor the status of container image SmartState Analysis tasks, navigate to the settings menu, then *Tasks*. The status of each task is displayed including time started, time ended, what part of the task is currently running, and any errors encountered.
+To monitor the status of container image SmartState analysis tasks, navigate to the settings menu, then *Tasks*. The status of each task is displayed including time started, time ended, what part of the task is currently running, and any errors encountered.
