add overview doc

--- a/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
+++ b/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
@@ -11,3 +11,5 @@ include::Ansible_Service_Linking.adoc[]
 
 include::manageiq-automate-role.adoc[]
 
+include::Ansible_Playbook_Store_Sessions.adoc[]
+
