added note regarding host value configurations

--- a/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
+++ b/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
@@ -29,9 +29,11 @@ If image:../images/1862.png[image] (*Add a new Button*) is not available, that m
 +
 [NOTE]
 ====
-To allow service dialogs associated with the custom button to override user input set the custom button to "Specific Hosts" and leave the associated text field blank.
+{product-title_short} supports two configurations for host input:
 
-Otherwise, the admin selected value will be used regardless of the value specified on the dialog by the user.  To avoid confusion the admin should remove the "Hosts" field from the dialog the service is using.
+* To allow user-provided host details, set the custom button to *Specific Hosts* and leave the associated text field blank. 
+
+* Remove the *Hosts* field when creating the dialog the service uses. In this configuration, the admin specified value is used. 
 ====
 +
 . Type in a *Text* and *Hover Text*, and select the *Icon* you want to use.
