--- a/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
+++ b/doc-Scripting_Actions/topics/To_create_an_Ansible_Playbook_button.adoc
@@ -29,11 +29,11 @@ If image:../images/1862.png[image] (*Add a new Button*) is not available, that m
 +
 [NOTE]
 ====
-{product-title_short} supports two configurations for host input:
+{product-title_short} supports two configurations for host value input:
 
-* To allow user-provided host details, set the custom button to *Specific Hosts* and leave the associated text field blank. 
+* To allow user-provided host values, set the custom button to *Specific Hosts* and leave the associated text field blank. 
 
-* Remove the *Hosts* field when creating the dialog the service uses. In this configuration, the admin specified value is used. 
+* To use admin-specified host values, remove the *Hosts* field when creating the dialog the service uses. In this configuration, the field will not appear to users. See link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/provisioning_virtual_machines_and_hosts/catalogs-services#service-dialogs[Service Dialogs] for information on generating a service dialog. 
 ====
 +
 . Type in a *Text* and *Hover Text*, and select the *Icon* you want to use.
