Added a table outlining the default roles and product features they can access.

--- a/doc-General_Configuration/cfme/master.adoc
+++ b/doc-General_Configuration/cfme/master.adoc
@@ -27,9 +27,5 @@ include::topics/About.adoc[]
 
 include::topics/RH_Insights.adoc[]
 
-
-
-
-
-
-
+[[appendix]]
+include::topics/appe-default-roles.adoc[]
